// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceDetails should match application snapshot 1`] = `
<body>
  <div>
    <div
      class="flex shrink-0 flex-col gap-5 py-8 text-sm"
    >
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            About
          </span>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-current hover:brightness-75 text-sm"
            href="/settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
        <p>
          React Application the Qovery Console
        </p>
        <dl
          class="grid grid-cols-2 gap-2"
        >
          <dt
            class="text-neutral-350 dark:text-neutral-300"
          >
            Last edit:
          </dt>
          <dd
            class="font-medium text-neutral-400 dark:font-normal dark:text-white"
          >
            <span
              class=""
              data-state="closed"
            >
              17 hours
            </span>
          </dd>
          <dt
            class="text-neutral-350 dark:text-neutral-300"
          >
            Created:
          </dt>
          <dd
            class="font-medium text-neutral-400 dark:font-normal dark:text-white"
          >
            <span
              class=""
              data-state="closed"
            >
              6 months
            </span>
          </dd>
        </dl>
      </section>
      <hr />
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            Source
          </span>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-current hover:brightness-75 text-sm"
            href="/settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`ServiceDetails should match database snapshot 1`] = `
<body>
  <div>
    <div
      class="flex shrink-0 flex-col gap-5 py-8 text-sm"
    >
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            About
          </span>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-current hover:brightness-75 text-sm"
            href="/settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
        <p>
          No description provided yet
        </p>
        <dl
          class="grid grid-cols-2 gap-2"
        >
          <dt
            class="text-neutral-350 dark:text-neutral-300"
          >
            Last edit:
          </dt>
          <dd
            class="font-medium text-neutral-400 dark:font-normal dark:text-white"
          >
            <span
              class=""
              data-state="closed"
            >
              2 months
            </span>
          </dd>
          <dt
            class="text-neutral-350 dark:text-neutral-300"
          >
            Created:
          </dt>
          <dd
            class="font-medium text-neutral-400 dark:font-normal dark:text-white"
          >
            <span
              class=""
              data-state="closed"
            >
              2 months
            </span>
          </dd>
        </dl>
      </section>
      <hr />
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            Source
          </span>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-current hover:brightness-75 text-sm"
            href="/settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`ServiceDetails should match job snapshot 1`] = `
<body>
  <div>
    <div
      class="flex shrink-0 flex-col gap-5 py-8 text-sm"
    >
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            About
          </span>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-current hover:brightness-75 text-sm"
            href="/settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
        <p>
          No description provided yet
        </p>
        <dl
          class="grid grid-cols-2 gap-2"
        >
          <dt
            class="text-neutral-350 dark:text-neutral-300"
          >
            Last edit:
          </dt>
          <dd
            class="font-medium text-neutral-400 dark:font-normal dark:text-white"
          >
            <span
              class=""
              data-state="closed"
            >
              1 day
            </span>
          </dd>
          <dt
            class="text-neutral-350 dark:text-neutral-300"
          >
            Created:
          </dt>
          <dd
            class="font-medium text-neutral-400 dark:font-normal dark:text-white"
          >
            <span
              class=""
              data-state="closed"
            >
              17 days
            </span>
          </dd>
        </dl>
      </section>
      <hr />
      <section
        class="flex flex-col text-neutral-350 gap-4 pl-8 pr-5"
      >
        <div
          class="flex flex-row justify-between"
        >
          <span
            class="font-medium text-neutral-400"
          >
            Source
          </span>
          <a
            class="cursor-pointer transition duration-100 font-medium inline-flex items-center gap-1 text-current hover:brightness-75 text-sm"
            href="/settings/general"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-gear text-base text-neutral-350"
            />
          </a>
        </div>
      </section>
    </div>
  </div>
</body>
`;
